Added BerichtType to API
